Fix  alignment

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -21,8 +21,9 @@ header {
     background-color: var(--black);
     color: var(--white);
     text-align: center;
-    height: 130px;
+    padding: 3rem 0;
     align-content: center;
+    margin-bottom: 30px;
     width: 100%;
 }
 
@@ -40,18 +41,18 @@ header h2 {
 main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    flex-direction: column;
+    margin: 50px auto 0;
+    column-gap: 30px;
+    row-gap: 30px;
+    max-width: 1000px;
 }
 
 section {
     border-radius: 10px;
     box-shadow: 2px 2px 10px #14213dff;
     overflow: hidden;
-    width: 300px;
-    margin-left: 70px;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+
 }
 
 section h3 {
@@ -75,6 +76,7 @@ section p, a{
 }
 
 section a {
+    display: block;
     font-size: 12px;
 }
 
@@ -90,6 +92,7 @@ footer {
     text-align: center;
     height: 130px;
     align-content: center;
+    margin-top: 30px;
     width: 100%;
 }
 
