--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -3,11 +3,11 @@
     main {
         display: grid;
         grid-template-columns: repeat(2, 2fr);
-        flex-direction: column;
+        max-width: 800px;
+        /* flex-direction: column; */
     }
 
     #aliexpress {
-        width: 85%;
         grid-column: 1/3;
         grid-row: 2;
     }
