--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -4,9 +4,12 @@
         display: grid;
         grid-template-columns: 1fr;
         text-align: center;
-        justify-content: center;
-        align-items: center;
-        justify-items: center;
-        margin: 0;
+        margin: 0 auto;
+        max-width: 300px;
     }
+
+     header h1 {
+        font-size: 1rem;
+     }
+
 }
